--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 .upper {
   background: url("./components/assets/Images/bck1.png");
   position: relative;
-  padding-top: 10px;
+  padding-top: 100px;
   margin: 0px;
 }
 .waves {
@@ -14,13 +14,7 @@ body {
   width: 100%;
   height: 300px;
 }
-.header-img {
-  position: relative;
-  margin: 0;
-  left: 130px;
-  top: 100px;
-  width: 900px;
-}
+
 .mkbspan {
   color: #8f99dd;
 }
@@ -49,6 +43,7 @@ body {
   color: #ffd9de;
 }
 .top-block {
+  position: relative;
   background-color: #fff;
   box-shadow: 1px 1px 20px #000;
   padding: 20px 40px;
@@ -70,14 +65,22 @@ body {
   left: 940px;
 }
 .upper-head {
+  border-radius: 25px;
+  box-shadow: 0px 0px 10px 0px #000;
+  padding: 16px 20px;
+  width: 840px;
   font-family: Helvetica, sans-serif;
   color: #f3236f;
   font-size: 40px;
   z-index: 100;
-  position: relative;
-  top: -30px;
+  position: absolute;
+  top: -27px;
+  left: 0px;
 }
+
 .icons {
+  position: absolute;
+  top: 300px;
   margin-top: 60px;
 }
 .icons img {
@@ -86,20 +89,22 @@ body {
   width: 50px;
 }
 .share-btn {
-  position: relative;
+  position: absolute;
   cursor: pointer;
-  top: -100px;
-  width: 200px;
+  top: 0px;
   left: 600px;
 }
 .share-btn h3 {
-  position: relative;
-  top: 50px;
+  position: absolute;
+  top: -10px;
   left: 60px;
   color: #fff;
   font-family: Helvetica, sans-serif;
 }
 .input-field {
+  position: absolute;
+  top: 150px;
+  left: 50px;
   height: 160px;
   width: 700px;
   font-size: 18px;
@@ -211,14 +216,21 @@ body {
 .head-head {
   margin-left: -280px;
 }
+.btnimg {
+  position: relative;
+  top: 0px;
+  left: 686px;
+  width: 150px;
+}
 .btn-bottom {
+  position: absolute;
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
   color: #fff;
   position: relative;
-  left: 675px;
-  top: -30px;
+  left: 525px;
+  top: -13px;
   padding: 20px 30px;
 }
 .inner-block {
@@ -282,12 +294,15 @@ body {
   }
 
   .right-img img {
-    top: 550px;
+    top: 600px;
     left: 40px;
   }
   .upper-head {
-    font-size: 27px;
+    width: 410px;
+    font-size: 30px;
+    top: -24px;
   }
+
   .icons {
     margin-top: 80px;
   }
@@ -296,11 +311,11 @@ body {
     width: 40px;
   }
   .share-btn {
-    top: -100px;
+    top: 0px;
     left: 240px;
   }
   .share-btn h3 {
-    top: 50px;
+    top: -10px;
     left: 40px;
   }
   .input-field {
