--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ body {
   padding-top: 100px;
   margin: 0px;
 }
+
 .waves {
   background: url("./components/assets/Images/waves.png") center no-repeat;
   background-size: cover;
@@ -237,92 +238,16 @@ body {
   position: relative;
   top: 39px;
 }
-@media (max-width: 768px) {
-  .bottom {
-    overflow: hidden;
-    margin: 0px;
-  }
+.commentSection {
+  display: none;
+}
 
-  .b-upper,
-  .b-lower {
-    margin: 30px 0px;
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .textl {
-    color: #8992a3;
-    font-size: 15px;
-    margin-top: 35px;
-    margin-left: -25px;
-  }
-  .block {
-    margin: 0 30px;
-  }
-  .head-head {
-    margin-left: -140px;
-  }
-  .btn-bottom {
-    left: 160px;
-    top: -30px;
-  }
-  .inner-block {
-    position: relative;
-    top: 50px;
-  }
-  .feedboard-title {
-    font-size: 4rem;
-    margin-top: 50px;
-    margin-bottom: 0px;
-  }
-  /* havdshsgdhghjdahkjsahjkdbhkaslkdm */
-
-  body {
-    overflow: visible;
-  }
-
-  .header-img {
-    top: 74px;
-    left: 19px;
-    width: 455px;
-    height: 70px;
-  }
-
-  .top-block {
-    width: 370px;
-    height: 400px;
-    margin: 0px 20px;
-  }
-
-  .right-img img {
-    top: 600px;
-    left: 40px;
-  }
-  .upper-head {
-    width: 410px;
-    font-size: 30px;
-    top: -24px;
-  }
-
-  .icons {
-    margin-top: 80px;
-  }
-  .icons img {
-    margin-left: 10px;
-    width: 40px;
-  }
-  .share-btn {
-    top: 0px;
-    left: 240px;
-  }
-  .share-btn h3 {
-    top: -10px;
-    left: 40px;
-  }
-  .input-field {
-    width: 360px;
-  }
-
-  .waves {
-    margin-top: 500px;
-  }
+.fbfooter {
+  display: none;
+}
+.headerMob {
+  display: none;
+}
+.mobile-upper {
+  display: none;
 }
