--- a/src/media.css
+++ b/src/media.css
@@ -1,11 +1,12 @@
 @media (max-width: 768px) {
   * {
     font-family: Helvetica, sans-serif;
+    overflow-x: hidden;
   }
   .mobile-upper {
     background-color: #e7e8fa;
     display: block;
-    margin-top: 100px;
+    margin-top: 10px;
     padding-top: 10px;
   }
   .upper {
@@ -18,12 +19,17 @@
 
   .b-upper,
   .b-lower {
-    margin: 30px 0px;
+    margin: 0px 0px;
     display: grid;
     grid-template-columns: 1fr;
   }
+  .b-upper {
+    padding-top: 60px;
+  }
   .b-lower {
-    margin-bottom: 150px;
+    margin-top: -70%;
+    padding-top: 30px;
+    padding-bottom: 100px;
   }
   .textl {
     color: #8992a3;
@@ -126,11 +132,18 @@
 
   .fbfooter {
     display: block;
+    background-color: #ed257a;
+    background: url("./components/assets/ImgMobile/footerImg.png") center
+      no-repeat;
+    background-size: cover;
+    margin: 0px 0px !important;
+    z-index: 1000;
     width: 100%;
+    height: 12vh;
     position: fixed;
-    color: #fff;
     bottom: 0;
-    margin: -30px;
+    overflow: hidden;
+    margin-bottom: -3% !important;
   }
   .headerMob {
     display: flex;
@@ -144,19 +157,21 @@
     top: 0;
     height: 60px !important;
     z-index: 1000000;
+    overflow: hidden;
+    position: relative;
   }
   .footerImg {
     height: 180px;
     width: 110%;
   }
   .fbhamburger {
-    height: 33px;
+    height: 23px;
     margin-top: 15px;
     margin-right: 10px;
     cursor: pointer;
   }
   .fblogo {
-    height: 70px;
+    height: 50px;
     margin-top: 0px;
     margin-left: 10px;
     cursor: pointer;
@@ -165,45 +180,46 @@
     color: #f7b0b5;
   }
   .fbhead {
-    margin-top: 7px;
+    margin-top: 0px;
     font-family: Helvetica, sans-serif;
     font-weight: 900;
-    font-size: 35px;
+    font-size: 30px;
+    overflow: hidden;
     color: #ed257a;
   }
   .fhome {
     cursor: pointer;
-    position: relative;
-    bottom: -130px;
-    left: 50px;
+    position: absolute;
+    bottom: 25%;
+    left: 5%;
     height: 35px;
   }
   .fsearch {
     cursor: pointer;
-    position: relative;
-    bottom: -130px;
-    left: 100px;
+    position: absolute;
+    bottom: 25%;
+    left: 25%;
     height: 35px;
   }
   .fmain {
     cursor: pointer;
-    position: relative;
-    bottom: -135px;
-    left: 139px;
-    height: 90px;
+    position: absolute;
+    bottom: 10%;
+    left: 41%;
+    height: 70px;
   }
   .fsettings {
     cursor: pointer;
-    position: relative;
-    bottom: -130px;
-    left: 180px;
+    position: absolute;
+    bottom: 25%;
+    left: 69%;
     height: 35px;
   }
   .ficon {
     cursor: pointer;
     position: relative;
-    bottom: -130px;
-    left: 220px;
+    bottom: -35%;
+    left: 87%;
     height: 35px;
   }
 
@@ -228,23 +244,23 @@
   }
   .shicon {
     cursor: pointer;
-    width: 60px;
+    width: 40px;
     position: relative;
-    top: -130px;
-    left: 60px;
+    top: -100px;
+    left: 20px;
   }
   .vidicon {
     margin-left: 30px;
   }
   .docicon {
     margin-left: 30px;
-    height: 54px;
-    width: 55px;
+    height: 34px;
+    width: 40px;
   }
   .para-mob {
     position: relative;
-    top: -120px;
-    left: 30px;
+    top: -100px;
+    left: 20px;
     font-size: 15px;
     font-weight: 500;
     color: #a1a8e2;
@@ -258,25 +274,37 @@
     background-color: #626fcf;
     font-size: 16px;
     margin-top: -50px;
-    margin-left: -200px;
+    margin-left: -150px;
+    width: 100px;
   }
   .mob-right-img {
     position: relative;
     top: -90px;
-    left: 250px;
-    height: 200px;
+    left: 50%;
+    height: 150px;
   }
   .upper-tophead {
     color: #ed257a;
     font-weight: 780;
   }
   .bottom {
-    background: none;
+    background: url("./");
     background-color: #e7e8fa;
     margin: 0px;
     font-family: Helvetica, sans-serif;
   }
   .feedboard-title {
     display: none;
+  }
+  .upper-mob {
+    overflow: hidden;
+  }
+  .block-2 {
+    overflow: hidden;
+    height: 900px;
+  }
+  .head-head {
+    font-size: 13px;
+    margin-left: 0px;
   }
 }
